--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "brainstellar",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple puzzles website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Varun Seth <8343593+varun-seth@users.noreply.github.com>",
   "dependencies": {
     "gatsby": "^5.9.1",
-    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
-    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^6.10.0",
+    "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-json": "^5.9.0",
-    "gatsby-transformer-sharp": "^5.9.0",
+    "gatsby-transformer-sharp": "^5.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
