--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^5.9.1",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.10.0",
     "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-source-filesystem": "^5.9.0",
