--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "gatsby-transformer-yaml": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.7",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
