--- a/src/data/puzzles.yaml
+++ b/src/data/puzzles.yaml
@@ -5,14 +5,25 @@
     "difficulty": "easy",
     "category": "probability",
     "source": "Quant Interview",
-    "question": "Two bullets are put into a gun's round barrel consecutively. The barrel has a capacity of 6. The gun is fired once, but no bullet is shot. Does rolling the barrel (shuffling) before next shot increase the probability of firing a bullet?",
+    "question": "Two bullets are loaded into a gun's round barrel consecutively.
+      The barrel has a capacity of 6. The gun is fired once, but no bullet is shot.
+      Does rolling the barrel (shuffling) before next shot increase the probability of firing a bullet?",
     "questionImage": "rolling_bullet.png",
-    "hint": "Since one empty slot has been used, there must be more probability of shooting a bullet in the next chance, than shooting after a shuffle.",
+    "hint": "Since the bullets are loaded consecutively, the next shot is also constrained.",
     "answer": "Yes, shuffling increases the probability of firing a bullet.",
-    "solution":
-      "Since there are 6 total slots with 2 bullets, the probabilty of firing a bullet after a shuffle is 2\/6.\n\
-      On the other hand, the probability of firing a bullet without a shuffle is 1\/4. To understand this, look at the image, and imagine that one of the empty slots (3, 4, 5, 6) just got shot. Now assumming the barrel turns clockwise, next shot will be (2, 3, 4, 5). and out of these four, only (1) has a bullet. Hence probability of firing a bullet is 1\/4. Note that this same case stands in anti-clockwise direction.\n\nWith shuffle, the probability of firing a bullet is 2\/6=1\/3. Hence yes, shuffling does increase the probability of firing a bullet (from 1\/4 to 1\/3)\n",
+    "solution": "
+      If the two bullets are randomly put instead of consecutively, then, after firing one empty shot, there are $2$ bullets and $5$ total slots. The probability would be $2/5 = 40\\%$, but that's not the case here.\n
+      Actually, the probability of firing a bullet without a shuffle is $1\/4 = 25\\%$. To understand this, imagine that the firing pin was on one of the empty slots $(3, 4, 5, 6)$, and the first shot was taken, but no bullet was fired. Now assumming that the barrel rotates clockwise, the pin will move to one of these slots: $(2, 3, 4, 5)$. Out of these four slots, only the slot $(1)$ has a bullet. Hence probability of firing a bullet is $1\/4 = 25\\%$.\n
+      Note that the same is true in anti-clockwise direction.\n\n
+      After the shuffle, the state is reset. There are $6$ total slots with $2$ bullets, the probabilty of firing a bullet after a shuffle is $2/6 = 1/3 \\approx 33\\% $.\n\n
+      Thus, shuffling does increase the probability of firing a bullet (from $25\\%$ to $33\\%$)\n\n
+      ",
     "solutionImage": "rolling_bullet_a.png",
+    "comment":
+      "This puzzle is counter-intuitive. Even today, I'm puzzled by its answer.
+      In real life situations, I'd expect someone to say that since we already lost one slot, the probability of firing a bullet should increase. And nobody would question this conclusion.
+      This is a good reminder to always step back and think rigorously about a problem.
+      ",
   },
   {
     "puzzleId": 2,
