--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
     "gatsby-transformer-json": "^5.9.0",
     "gatsby-transformer-remark": "^6.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
-    "gatsby-transformer-yaml": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.7",
-    "rehype-katex": "^6.0.3",
-    "remark-math": "^5.1.1"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
