✨ md image support

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-remark-images": "^7.10.0",
     "gatsby-remark-katex": "^7.10.0",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-json": "^5.9.0",
