--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Varun Seth <8343593+varun-seth@users.noreply.github.com>",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "gatsby": "^5.9.1",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
