--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,9 +28,9 @@ jobs:
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
-          git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ env.PROD_USER }}/${{ env.PROD_REPO }}.git
-          cp -r public/* ${{ env.PROD_REPO }}
-          cd ${{ env.PROD_REPO }}
+          git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/$PROD_USER/$PROD_REPO.git
+          cp -r public/* $PROD_REPO
+          cd $PROD_REPO
           git add .
           git commit -m "Update puzzles component"
           git push
